CSS Wk 2 Coding

--- a/about.html
+++ b/about.html
@@ -3,24 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>About Us</title>
 </head>
-<body>
-    <header>
-        <img src="instagram profile.jpg" width="400" alt="Artful Bites Cafe logo">
-        <h1>Artful Bites Cafe</h1>
+<body class="body">
+    <header class="header">
+        <img src="Artful Bites Cafe.png" width="300" alt="Artful Bites Cafe logo">
+        <h3>"Where Art, Music, and Baking collide"</h3>
     </header>
-    <nav>
+    <nav class="nav">
         <!--a href is absolute (it will take me directly to that link)-->
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="orderform.html">Order Form</a>
+        <a id="links" href="index.html">Home</a>
+        <a id="links" href="about.html">About Us</a>
+        <a id="links" href="orderform.html">Order Form</a>
     </nav>
     <hr>
-<!--added h2,h3,and h4 to give the page a semblance of flow within the page-->
+    <section class="section">
+        <h3 class="title">Our Mission Statement</h3>
+            <h4>
+            <p>
+            At Artful Bites Cafe, our mission is to ignite a world of flavors and unleash boundless creativity. We strive to be a 
+            unique destination that combines the art of baking with a vibrant creativity center,<br> fostering a community where passion, imagination, and delectable treats converge.
+            </p>
+            </h4>
+    </section>
+    <!--added h2,h3,and h4 to give the page a semblance of flow within the page-->
     <header>
-        <h2>About Us</h2>
-        <h3>Our Vision Statement</h3>
+        <h2 class="title">About Us</h2>
+        <h3 class="header">Our Vision Statement</h3>
         <h4>
             <!--I added the break tag <br> on here to give room in between each list item-->
             <ul>
@@ -37,14 +47,6 @@
             </ul>
         </h4>
     </header>
-    <section>
-        <h3>Our Mission Statement</h3>
-            <h4>
-            <p>
-            At Artful Bites Cafe, our mission is to ignite a world of flavors and unleash boundless creativity. We strive to be a 
-            unique destination that combines the art of baking with a vibrant creativity center,<br> fostering a community where passion, imagination, and delectable treats converge.
-            </p>
-            </h4>
-    </section>
+    
 </body>
 </html>
