--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ Create style rules using class, id, and element selectors.
         <!--This is the tag line in the second smallest header size-->
         <h3>"Where Art, Music, and Baking collide"</h3>
     </header>
-  
+  <!--added nav hover to links so they highlight. 
+  also added the link id to remove the underline-->
   <div class="nav">
     <!--a href is absolute (it will take me directly to that link)-->
     <a id="links" href="index.html">Home</a>
@@ -39,6 +40,8 @@ Create style rules using class, id, and element selectors.
     <a id="links" href="orderform.html">Order Form</a>
   </div>
   <hr>
+  <!--created box-model id to add the text in a box 
+  so that it stands out.-->
   <section id="box-model">
   <h3>
     <!--added the paragraph tag to make two different paragraphs giving some white space between the two-->
